[project]
name = "titration-curve"
version = "1.0.0"
description = "Perform titration curves of any acid-base pair."
authors = [
    {name = "Pedro", email = "pedro@tvq.br"},
]
dependencies = [
    "numpy>=1.23.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "blue>=0.9.0",
    "isort>=5.10.1",
    "flake8>=4.0.1",
]

[tool.pdm.scripts]
lint = "flake8 src/"
sort = "isort src/"
format = "blue src/"
all = {composite = ["sort", "format", "lint"]}
